# ghc-name-catcher

./: .gitignore  README.md  ghc-name-catcher.cabal  shell.nix  test-versions
example/: cabal.project  example.cabal
example/src/Foo/: Bar.hs
src/: GhcNameCatcher.hs
test/: Spec.hs
